--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "urlshortner",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "type": "commonjs",
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
     "nanoid": "^3.3.7"
