--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "urlshortner",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "type": "commonjs",
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
-    "nanoid": "^3.3.7"
+    "nanoid": "^3.3.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
