--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "urlshortner",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon index.js",
-    "start": "node index.js"
+    "start-dev": "nodemon --env-file=.env index.js",
+    "start": "node --env-file=.env index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "nanoid": "^3.3.7",
     "uuid": "^9.0.1"
